--- a/src/interfazGrafica/Login.form
+++ b/src/interfazGrafica/Login.form
@@ -239,7 +239,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="N&#xfa;mero: 1 o 2 - no precisa contrase&#xf1;a"/>
+            <Property name="text" type="java.lang.String" value="N&#xfa;mero: 1, 2 o 3 - no precisa contrase&#xf1;a"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
